--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/platform-server": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@aspnet/signalr": "^1.0.4",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
+    "angular2-highcharts": "^0.5.5",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
