--- a/Twitter monitor.csproj
+++ b/Twitter monitor.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="CodingUpAStorm.VaderSharp" Version="1.0.4" />
+    <PackageReference Include="Microsoft.AspNet.SignalR" Version="2.4.0-preview2-20181018-02" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="2.1.1" />
     <PackageReference Include="TweetinviAPI" Version="4.0.0" />
