--- a/Twitter monitor.csproj
+++ b/Twitter monitor.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.AspNet.SignalR" Version="2.4.0-preview2-20181018-02" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="2.1.1" />
+    <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="2.18.3" />
     <PackageReference Include="TweetinviAPI" Version="4.0.0" />
   </ItemGroup>
 
