--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -29,7 +29,9 @@
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "file-saver": "^2.0.0",
     "rxjs": "^5.5.6",
+    "xlsx": "^0.14.1",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
